--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "4.17.1",
+    "pg-promise": "^11.3.0",
     "socket.io": "2.3.0"
   },
   "devDependencies": {
